--- a/program/index.html
+++ b/program/index.html
@@ -52,14 +52,7 @@
 				  work happening at the MIT Media Lab.</p>
           </div>
 </div>
-</header>
-				  <header style="min-height: 30%">
-				  <div class="header-content">
-							     <div class="header-content-inner" style="padding-left: 7%; padding-right:7%">
-											      <img class="img-responsive" src="/HowItWorks.png" alt="diagram">
-											      </div>
-											      </div>
-											      </header>
+<img class="img-responsive" src="/HowItWorks.png" alt="diagram" style="min-height: 30%">
 <section class="time-line" style="padding-top: 15%">
 <div class="header-content">
 			   <div class="header-content-inner" style="padding-top: 20%">
