--- a/program/index.html
+++ b/program/index.html
@@ -52,6 +52,7 @@
 				  work happening at the MIT Media Lab.</p>
           </div>
 </div>
+				  </header>
 <img class="img-responsive" src="/HowItWorks.png" alt="diagram" style="min-height: 30%">
 <section class="time-line" style="padding-top: 15%">
 <div class="header-content">
