--- a/about/index.html
+++ b/about/index.html
@@ -30,10 +30,10 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		    <ul class="nav navbar-nav navbar-right"> 
-			    <li><a class="active" href="/about">About</a></li>
-                <li><a href="/program">How it Works</a></li>
-                <li><a href="/FAQ">FAQ</a></li>
-                <li><a href="/apply" class="class4">Apply</a></li>
+			    <li><a class="active class1" href="/about">About</a></li>
+                <li><a class="class1" href="/program">How it Works</a></li>
+                <li><a class="class1" href="/FAQ">FAQ</a></li>
+                <li><a class="class1" href="/apply" class="class4">Apply</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
