--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="https://www.media.mit.edu/"><img alt="Media Lab" src="Refugee-Learning-Accelerator.github.io/Mit_medialab_logo.png" height="20px" width="40px"></a>
+                <a class="navbar-brand page-scroll" href="https://www.media.mit.edu/"><img alt="Media Lab" src="/Mit_medialab_logo.png" height="20px" width="40px"></a>
                 <a class="navbar-brand" href="/">Refugee Learning Accelerator</a>
             </div>
 
