--- a/program/index.html
+++ b/program/index.html
@@ -54,9 +54,9 @@
 </div>
 				  </header>
 <img class="img-responsive" src="/HowItWorks.png" alt="diagram">
-<section class="time-line">
+<section class="time-line" style="padding-top: 20%">
 <div class="header-content">
-			   <div class="header-content-inner" style="padding-top: 35%">
+			   <div class="header-content-inner">
                   <h2>1. Apply (Aug-Sept 2017)</h2>
                       <p style:"color=#000000">You put together a team of three to six computer scientists, engineers, and designers all
 					      of whom have an interest in applying their technical skills to the real world problems
