--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -52,33 +52,59 @@
 <section style="padding: 10%; padding-top: 5%">
 <div class="container">
 	<h2>Can I apply as an individual?</h2>
-	<p class="QA">No. We’re looking for people to apply on teams. However, if you don’t already have a team you can head over to our <a href="https://www.facebook.com/groups/147496302487491" class="class2">Facebook Marketplace</a> to find other individuals interested in forming a team.</p>	     
+	<p class="QA">No. We’re looking for people to apply on teams. However, if you don’t already have a team you can head over to our 
+		<a href="https://www.facebook.com/groups/147496302487491" class="class2">Facebook Marketplace</a> to find other 
+		individuals interested in forming a team.</p>	     
 	<h2>I’m a refugee and no longer live in the Middle East, can I still apply?</h2>
-	<p class="QA">Definitely! Refugees from the Middle East are eligible to apply from wherever they are currently living. Unfortunately, due to restrictions on our funding, we are unable to work with current residents of Syria.</p>
+	<p class="QA">Definitely! Refugees from the Middle East are eligible to apply from wherever they are currently living. 
+		Unfortunately, due to restrictions on our funding, we are unable to work with current residents of Syria.</p>
 	<h2>I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?</h2>
-	<p class="QA">Definitely! However, in the application we will ask about your future plans and commitment to the region. We’re looking to support projects that will be based in the Middle East.</p>
+	<p class="QA">Definitely! However, in the application we will ask about your future plans and commitment to the region. We’re 
+		looking to support projects that will be based in the Middle East.</p>
+	<h2>Do I have to be a refugee to participate in the Accelerator?</h2>
+	<p class="QA">No. We're looking to support a community of innovators from the Middle East with an interest in using their tech 
+		skills to support refugee learners, but you don't have to be a refugee.</p>
 	<h2>I already have an idea about using technology to support refugee learners, can I still apply?</h2>
-	<p class="QA">Certainly, but you’ll still have to go through the <a class="class2" href="/program">Ideate stage.</a> We want you to be up to speed on what is currently happening in the field of digital education for refugees and connect with other teams. The Ideate stage is designed to do just that.</p>
+	<p class="QA">Certainly, but you’ll still have to go through the <a class="class2" href="/program">Ideate stage.</a> We want you 
+		to be up to speed on what is currently happening in the field of digital education for refugees and connect with other 
+		teams. The Ideate stage is designed to do just that.</p>
 	<h2>Does my team all have to be located in one place?</h2>
-	<p class="QA">No. It will probably be easier to work together if at least a portion of your team is co-located, but it is not a requirement.</p>
+	<p class="QA">No. It will probably be easier to work together if at least a portion of your team is co-located, but it is not a 
+		requirement.</p>
 	<h2>What is the time commitment?</h2>
-	<p class="QA">The time commitment will vary by phase. In the Ideate phase we expect you to spend about 15-20 hours per week on activities related to the Refugee Learning Accelerator. In the Prototype phase teams will spend a week together in Amman. Overall, the Accelerator is designed to be a part-time commitment. We do not expect you to quit your job or suspend your schooling to work on this.</p>
-	<h2>If my team is accepted into the <a class="class2" href="/program">Prototype phase</a>, do we have to cover the cost of travel to Amman?</h2>
-	<p class="QA">No. The Refugee Learning Accelerator will cover the cost of travel for all successful teams. However, it is your responsibility to make sure that you have a valid passport.</p>
+	<p class="QA">The time commitment will vary by phase. In the Ideate phase we expect you to spend about 15-20 hours per week on 
+		activities related to the Refugee Learning Accelerator. In the Prototype phase teams will spend a week together in 
+		Amman. Overall, the Accelerator is designed to be a part-time commitment. We do not expect you to quit your job or 
+		suspend your schooling to work on this.</p>
+	<h2>If my team is accepted into the <a class="class2" href="/program">Prototype phase</a>, do we have to cover the cost of 
+		travel to Amman?</h2>
+	<p class="QA">No. The Refugee Learning Accelerator will cover the cost of travel for all successful teams. However, it is your 
+		responsibility to make sure that you have a valid passport.</p>
 	<h2>Will participants travel to MIT in Cambridge, Massachusetts?</h2>
 	<p class="QA">No. Successful participants will be brought together in Beirut or Amman. There will be no travel to the U.S.</p>
 	<h2>Does our idea have to be for-profit?</h2>
-	<p class="QA">No, definitely not! We want teams to think about the financial sustainability of their projects, but there are many different ways to achieve that, both non-profit and for-profit.</p>
+	<p class="QA">No, definitely not! We want teams to think about the financial sustainability of their projects, but there are 
+		many different ways to achieve that, both non-profit and for-profit.</p>
 	<h2>Do you provide office space?</h2>
-	<p class="QA">No. We are not able to provide any office space in the Ideate phase. In the Incubate phase, if necessary, we will coordinate with partner organizations to find office space wherever the team is located.</p>
+	<p class="QA">No. We are not able to provide any office space in the Ideate phase. In the Incubate phase, if necessary, we will 
+		coordinate with partner organizations to find office space wherever the team is located.</p>
 	<h2>Upon completion of the program, will I receive a certificate?</h2>
-	<p class="QA">Yes, you will receive a certificate of completion. However, this is not an accredited MIT education program and does not count towards an MIT degree.</p>
+	<p class="QA">Yes, you will receive a certificate of completion. However, this is not an accredited MIT education program and 
+		does not count towards an MIT degree.</p>
 	<h2>Does MIT own the intellectual property of Refugee Learning Accelerator projects?</h2>
-	<p class="QA">Participants retain all intellectual property in their work, but we require contributions during the Ideate phase to be openly licensed (software under an open source initiative <a href="https://opensource.org/licenses" class="class2">approved license</a>; content under <a href="https://creativecommons.org/licenses/by/4.0/" class="class2">CC BY</a>). </p>
+	<p class="QA">Participants retain all intellectual property in their work, but we require contributions during the Ideate phase 
+		to be openly licensed (software under an open source initiative <a href="https://opensource.org/licenses" class="class2">approved license</a>; content under <a href="https://creativecommons.org/licenses/by/4.0/" class="class2">CC BY</a>).</p>
 	<h2>Why the focus on learning?</h2>
-	<p class="QA">Because it’s what we do! The MIT Media Lab Learning Initiative is focused on the future of learning; we develop technologies and workshops centered around the four Ps of creative learning: peers, play, passion and projects. We’re keenly aware that a “lack of educational opportunities” in the Middle East is one of primary "push" factors cited by refugees arriving in Europe. And that as the war in Syria continues, the crisis around education in the region is only going to become more acute. </p>
+	<p class="QA">Because it’s what we do! The MIT Media Lab Learning Initiative is focused on the future of learning; we develop 
+		technologies and workshops centered around the four Ps of creative learning: peers, play, passion and projects. We’re 
+		keenly aware that a “lack of educational opportunities” in the Middle East is one of primary "push" factors cited by 
+		refugees arriving in Europe. And that as the war in Syria continues, the crisis around education in the region is only 
+		going to become more acute. </p>
 	<h2>What do you mean by "refugee learners?"</h2>
-	<p class="QA">We’re interested in supporting projects which benefit refugee youth, aged 15-24, who remain in the Middle East, and want to learn--whether that is in a formal school system or more informally. The refugee learner does not necessarily have to be the end user of the project--it could also be parents, teachers etc., but all projects should be beneficial to refugee learners in some capacity.</p>
+	<p class="QA">We’re interested in supporting projects which benefit refugee youth, aged 15-24, who remain in the Middle East, 
+		and want to learn--whether that is in a formal school system or more informally. The refugee learner does not 
+		necessarily have to be the end user of the project--it could also be parents, teachers etc., but all projects should be 
+		beneficial to refugee learners in some capacity.</p>
 	<h2>Who is eligible to participate in the Refugee Learning Accelerator?</h2>
 	<p class="QA">Details on eligibility are available <a class="class2" href="/apply">here</a>.</p>
 	<h2>What do participants in the Refugee Learning Accelerator program receive?</h2>
