--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -16,14 +16,17 @@
 			<script type="text/javascript">$(document).ready(function() {$('dropdown-toggle').dropdown()});</script>
 	</head>
 						      <body>
-						      <nav id="mainNav" class="navbar navbar-default navbar-fixed-top affix-top" style="background-color: white">
+						      <nav id="mainNav" class="navbar navbar-default navbar-fixed-top affix-top" 
+							   style="background-color: white">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-
+													  1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="https://www.media.mit.edu/"><img alt="Media Lab" src="/Mit_medialab_logo.png" height="30px" width="30px"></a>
+                <a class="navbar-brand page-scroll" href="https://www.media.mit.edu/"><img alt="Media Lab" src="/Mit_medialab_logo.png" 
+											   height="30px" width="30px"></a>
                 <a class="navbar-brand" href="/">Refugee Learning Accelerator</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -40,25 +43,32 @@
         <!-- /.container-fluid -->
 	</nav>
 
-						   <header class="FAQ" style="text-align: left; background-position:center; padding-top:30px">
+						   <header class="FAQ" style="text-align: left; background-position:center; padding-
+									      top:30px">
 <div class="header-content">
           <div class="header-content-inner">
               <h1 id="homeHeading">FAQ</h1>
 					   <hr>
-				  <p style="color: #000000">Don't see what you are looking for below?<br>Email us at <a class="class2" style="color: #0020C2" href="mailto:refugees@media.mit.edu">refugees@media.mit.edu</a></p>
+				  <p style="color: #000000">Don't see what you are looking for below?<br>Email us at <a class="class2" 
+															style="color: 
+					  #0020C2" href="mailto:refugees@media.mit.edu">refugees@media.mit.edu</a></p>
 																  </div> 
 																  </div>
-																  </header>
+																  
+							      </header>
 <section style="padding: 10%; padding-top: 5%">
 <div class="container">
-	<h2>Can I apply as an individual?</h2>
+	<a href="#CanIApplyAsAnIndividual">Can I apply as an individual?</a>
+	<a href="#ApplyNotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
+	<a href="#LiveAbroad">I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?</a>
+	<h2 id="CanIApplyAsAnIndividual">Can I apply as an individual?</h2>
 	<p class="QA">No. We’re looking for people to apply on teams. However, if you don’t already have a team you can head over to our 
 		<a href="https://www.facebook.com/groups/147496302487491" class="class2">Facebook Marketplace</a> to find other 
 		individuals interested in forming a team.</p>	     
-	<h2>I’m a refugee and no longer live in the Middle East, can I still apply?</h2>
+	<h2 id="ApplyNotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</h2>
 	<p class="QA">Definitely! Refugees from the Middle East are eligible to apply from wherever they are currently living. 
 		Unfortunately, due to restrictions on our funding, we are unable to work with current residents of Syria.</p>
-	<h2>I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?</h2>
+	<h2 id="LiveAbroad">I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?</h2>
 	<p class="QA">Definitely! However, in the application we will ask about your future plans and commitment to the region. We’re 
 		looking to support projects that will be based in the Middle East.</p>
 	<h2>Do I have to be a refugee to participate in the Accelerator?</h2>
