--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -58,9 +58,11 @@
 							      </header>
 <section style="padding: 10%; padding-top: 5%">
 <div class="container">
-	<a href="#CanIApplyAsAnIndividual">Can I apply as an individual?</a>
-	<a href="#ApplyNotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
-	<a href="#LiveAbroad">I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?</a>
+	<li><a class="class1" href="#CanIApplyAsAnIndividual">Can I apply as an individual?</a></li>
+	<li><a class="class1" href="#ApplyNotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
+	</li>
+	<li><a class="class1" href="#LiveAbroad">I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?
+		</a></li>
 	<h2 id="CanIApplyAsAnIndividual">Can I apply as an individual?</h2>
 	<p class="QA">No. We’re looking for people to apply on teams. However, if you don’t already have a team you can head over to our 
 		<a href="https://www.facebook.com/groups/147496302487491" class="class2">Facebook Marketplace</a> to find other 
