--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -58,11 +58,12 @@
 							      </header>
 <section style="padding: 10%; padding-top: 5%">
 <div class="container">
-	<li><a class="class1" href="#CanIApplyAsAnIndividual">Can I apply as an individual?</a></li>
-	<li><a class="class1" href="#ApplyNotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
+	<li><a class="FAQ" href="#CanIApplyAsAnIndividual">Can I apply as an individual?</a></li>
+	<li><a class="FAQ" href="#ApplyNotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
 	</li>
-	<li><a class="class1" href="#LiveAbroad">I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?
+	<li><a class="FAQ" href="#LiveAbroad">I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?
 		</a></li>
+	<li><a class="FAQ" href="#NotRefugee">Do I have to be a refugee to participate in the Accelerator?</a></li>
 	<h2 id="CanIApplyAsAnIndividual">Can I apply as an individual?</h2>
 	<p class="QA">No. We’re looking for people to apply on teams. However, if you don’t already have a team you can head over to our 
 		<a href="https://www.facebook.com/groups/147496302487491" class="class2">Facebook Marketplace</a> to find other 
@@ -73,7 +74,7 @@
 	<h2 id="LiveAbroad">I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?</h2>
 	<p class="QA">Definitely! However, in the application we will ask about your future plans and commitment to the region. We’re 
 		looking to support projects that will be based in the Middle East.</p>
-	<h2>Do I have to be a refugee to participate in the Accelerator?</h2>
+	<h2 id="NotRefugee">Do I have to be a refugee to participate in the Accelerator?</h2>
 	<p class="QA">No. We're looking to support a community of innovators from the Middle East with an interest in using their tech 
 		skills to support refugee learners, but you don't have to be a refugee.</p>
 	<h2>I already have an idea about using technology to support refugee learners, can I still apply?</h2>
