--- a/about/index.html
+++ b/about/index.html
@@ -49,7 +49,7 @@
             </div>
 	</div>
 	</header>
-          <section id="services">
+          <section style="padding=top: 5%">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
