--- a/about/index.html
+++ b/about/index.html
@@ -49,7 +49,7 @@
             </div>
 	</div>
 	</header>
-          <section style="padding=top: 5%">
+          <section id="Advisors" style="padding=top: 5%">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             </section>
-   <section id="services">
+   <section id="MediaLabTeam">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
@@ -114,7 +114,7 @@
             </div>
         </section>
 							    	<!--
-							       <section id="services">
+							       <section id="Mentors">
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-12 text-center">
