--- a/about/index.html
+++ b/about/index.html
@@ -49,8 +49,8 @@
             </div>
 	</div>
 	</header>
-          <section id="Advisors" style="padding=top: 5%">
-                <div class="container">
+          <section id="Advisors">
+                <div class="container" style="padding=top: 10%">
                     <div class="row">
                         <div class="col-lg-12 text-center">
                             <h2 class="section-heading">Advisors</h2>
@@ -72,7 +72,7 @@
                 </div>
             </section>
    <section id="MediaLabTeam">
-            <div class="container">
+            <div class="container" style="padding=top: 10%">
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading">Meet the Media Lab Team</h2>
