--- a/about/index.html
+++ b/about/index.html
@@ -50,8 +50,8 @@
 	</div>
 	</header>
           <section id="Advisors">
-                <div class="container" style="padding=top: 10%">
-                    <div class="row">
+                <div class="container">
+                    <div class="row" style="padding=top: 10%">
                         <div class="col-lg-12 text-center">
                             <h2 class="section-heading">Advisors</h2>
                             <hr class="primary">
@@ -72,8 +72,8 @@
                 </div>
             </section>
    <section id="MediaLabTeam">
-            <div class="container" style="padding=top: 10%">
-                <div class="row">
+            <div class="container">
+                <div class="row" style="padding=top: 10%">
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading">Meet the Media Lab Team</h2>
                         <hr class="primary">
