--- a/about/index.html
+++ b/about/index.html
@@ -51,7 +51,7 @@
 	</header>
           <section id="Advisors">
                 <div class="container">
-                    <div class="row" style="padding=top: 10%">
+                    <div class="row" style="padding-top: 10%">
                         <div class="col-lg-12 text-center">
                             <h2 class="section-heading">Advisors</h2>
                             <hr class="primary">
@@ -73,7 +73,7 @@
             </section>
    <section id="MediaLabTeam">
             <div class="container">
-                <div class="row" style="padding=top: 10%">
+                <div class="row" style="padding-top: 10%">
                     <div class="col-lg-12 text-center">
                         <h2 class="section-heading">Meet the Media Lab Team</h2>
                         <hr class="primary">
