--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -56,7 +56,7 @@
 																  </div>
 																  
 							      </header>
-<section style="padding: 10%; padding-top: 5% border: 15px #C11B17">
+<section style="padding: 10%; padding-top: 5%; border: 15px #C11B17;">
 <div class="container">
 	<li><a class="FAQ" href="#CanIApplyAsAnIndividual">Can I apply as an individual?</a></li>
 	<li><a class="FAQ" href="#ApplyNotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
