--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -56,14 +56,16 @@
 																  </div>
 																  
 							      </header>
-<section style="padding: 10%; padding-top: 5%; border: 15px #C11B17;">
-<div class="container">
+<section style="padding: 10%; padding-top: 5%;">
+<div class="container"  style="border: 15px #C11B17";>
 	<li><a class="FAQ" href="#CanIApplyAsAnIndividual">Can I apply as an individual?</a></li>
 	<li><a class="FAQ" href="#ApplyNotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
 	</li>
 	<li><a class="FAQ" href="#LiveAbroad">I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?
 		</a></li>
 	<li><a class="FAQ" href="#NotRefugee">Do I have to be a refugee to participate in the Accelerator?</a></li>
+	</div>
+	<div class="container">
 	<h2 id="CanIApplyAsAnIndividual" class="FAQ">Can I apply as an individual?</h2>
 	<p class="QA">No. We’re looking for people to apply on teams. However, if you don’t already have a team you can head over to our 
 		<a href="https://www.facebook.com/groups/147496302487491" class="class2">Facebook Marketplace</a> to find other 
