--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -57,7 +57,7 @@
 																  
 							      </header>
 <section style="padding: 10%; padding-top: 5%;">
-<div class="container"  style="border: 15px #C11B17";>
+<div class="container"  style="border: 15px solid #C11B17";>
 	<li><a class="FAQ" href="#CanIApplyAsAnIndividual">Can I apply as an individual?</a></li>
 	<li><a class="FAQ" href="#ApplyNotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
 	</li>
