--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -58,12 +58,12 @@
 							      </header>
 <section style="padding: 10%; padding-top: 5%;">
 <div class="container"  style="border: 15px solid #C11B17";>
-	<li><a class="FAQ" href="#CanIApplyAsAnIndividual">Can I apply as an individual?</a></li>
-	<li><a class="FAQ" href="#ApplyNotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
-	</li>
-	<li><a class="FAQ" href="#LiveAbroad">I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?
-		</a></li>
-	<li><a class="FAQ" href="#NotRefugee">Do I have to be a refugee to participate in the Accelerator?</a></li>
+	<h2><a class="FAQ" href="#CanIApplyAsAnIndividual">Can I apply as an individual?</a></h2>
+	<h2><a class="FAQ" href="#ApplyNotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
+	</h2>
+	<h2><a class="FAQ" href="#LiveAbroad">I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?
+		</a></h2>
+	<h2><a class="FAQ" href="#NotRefugee">Do I have to be a refugee to participate in the Accelerator?</a></h2>
 	</div>
 	<div class="container">
 	<h2 id="CanIApplyAsAnIndividual" class="FAQ">Can I apply as an individual?</h2>
