--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -61,7 +61,7 @@
 	<h2><a class="FAQ" href="#CanIApplyAsAnIndividual">Can I apply as an individual?</a></h2>
 	<h2><a class="FAQ" href="#ApplyNotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
 	</h2>
-	<h2><a class="FAQ" href="#LiveAbroad">I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?
+	<h2><a class="FAQ" href="#LiveAbroad">I’m Lebanese/ Jordanian/ Iraqi/ Palestinian/ Syrian, but live abroad, can I still apply?
 		</a></h2>
 	<h2><a class="FAQ" href="#NotRefugee">Do I have to be a refugee to participate in the Accelerator?</a></h2>
 	</div>
@@ -73,7 +73,7 @@
 	<h2 id="ApplyNotInMiddleEast" class="FAQ">I’m a refugee and no longer live in the Middle East, can I still apply?</h2>
 	<p class="QA">Definitely! Refugees from the Middle East are eligible to apply from wherever they are currently living. 
 		Unfortunately, due to restrictions on our funding, we are unable to work with current residents of Syria.</p>
-	<h2 id="LiveAbroad" class="FAQ">I’m Lebanese/Jordanian/Iraqi/Palestinian/Syrian, but live abroad, can I still apply?</h2>
+	<h2 id="LiveAbroad" class="FAQ">I’m Lebanese/ Jordanian/ Iraqi/ Palestinian/ Syrian, but live abroad, can I still apply?</h2>
 	<p class="QA">Definitely! However, in the application we will ask about your future plans and commitment to the region. We’re 
 		looking to support projects that will be based in the Middle East.</p>
 	<h2 id="NotRefugee" class="FAQ">Do I have to be a refugee to participate in the Accelerator?</h2>
