--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -58,19 +58,20 @@
 							      </header>
 <section style="padding: 10%; padding-top: 5%;">
 <div class="container"  style="border: 15px solid #B6B6B4";>
-	<h2><a class="FAQ" href="#CanIApplyAsAnIndividual">Can I apply as an individual?</a></h2>
-	<h2><a class="FAQ" href="#ApplyNotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
+	<h2><a class="FAQ" href="#Individual">Can I apply as an individual?</a></h2>
+	<h2><a class="FAQ" href="#NotInMiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
 	</h2>
 	<h2><a class="FAQ" href="#LiveAbroad">I’m Lebanese/ Jordanian/ Iraqi/ Palestinian/ Syrian, but live abroad, can I still apply?
 		</a></h2>
 	<h2><a class="FAQ" href="#NotRefugee">Do I have to be a refugee to participate in the Accelerator?</a></h2>
+	
 	</div>
 	<div class="container">
-	<h2 id="CanIApplyAsAnIndividual" class="FAQ">Can I apply as an individual?</h2>
+	<h2 id="Individual" class="FAQ">Can I apply as an individual?</h2>
 	<p class="QA">No. We’re looking for people to apply on teams. However, if you don’t already have a team you can head over to our 
 		<a href="https://www.facebook.com/groups/147496302487491" class="class2">Facebook Marketplace</a> to find other 
 		individuals interested in forming a team.</p>	     
-	<h2 id="ApplyNotInMiddleEast" class="FAQ">I’m a refugee and no longer live in the Middle East, can I still apply?</h2>
+	<h2 id="NotInMiddleEast" class="FAQ">I’m a refugee and no longer live in the Middle East, can I still apply?</h2>
 	<p class="QA">Definitely! Refugees from the Middle East are eligible to apply from wherever they are currently living. 
 		Unfortunately, due to restrictions on our funding, we are unable to work with current residents of Syria.</p>
 	<h2 id="LiveAbroad" class="FAQ">I’m Lebanese/ Jordanian/ Iraqi/ Palestinian/ Syrian, but live abroad, can I still apply?</h2>
