--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -75,13 +75,13 @@
 	<h2><a class="FAQ" href="#MIT">Will participants travel to MIT in Cambridge, Massachusetts?</a></h2>
 	<h2><a class="FAQ" href="#ForProfit">Does our idea have to be for-profit?</a></h2>
 	<h2><a class="FAQ" href="#OfficeSpace">Do you provide office space?</a></h2>
-	<h2><a class="FAQ" href="Certificate">Upon completion of the program, will I receive a certificate?</a></h2>
-	<h2><a class="FAQ" href="IntellectualProperty">Does MIT own the intellectual property of Refugee Learning Accelerator projects?
+	<h2><a class="FAQ" href="#Certificate">Upon completion of the program, will I receive a certificate?</a></h2>
+	<h2><a class="FAQ" href="#IntellectualProperty">Does MIT own the intellectual property of Refugee Learning Accelerator projects?
 		</a></h2>
-	<h2><a class="FAQ" href="Learning">Why the focus on learning?</a></h2>
-	<h2><a class="FAQ" href="RefugeeLearners">What do you mean by "refugee learners?"</a></h2>
-	<h2><a class="FAQ" href="Eligible">Who is eligible to participate in the Refugee Learning Accelerator?</a></h2>
-	<h2><a class="FAQ" href="Program">What do participants in the Refugee Learning Accelerator program receive?</a></h2>
+	<h2><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
+	<h2><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>
+	<h2><a class="FAQ" href="#Eligible">Who is eligible to participate in the Refugee Learning Accelerator?</a></h2>
+	<h2><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?</a></h2>
 	</div>
 	<div class="container">
 	<h2 id="Individual" class="FAQ">Can I apply as an individual?</h2>
