--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -70,7 +70,7 @@
 		</a></h2>
 	<h2><a class="FAQ" href="#Team">Does my team all have to be located in one place?</a></h2>
 	<h2><a class="FAQ" href="#TimeCommitment">What is the time commitment?</a></h2>
-	<h2><a class="FAQ" href="#Travel">If my team is accepted into the <a class="class2" href="/program">Prototype phase</a>, do we 
+	<h2><a class="FAQ" href="#Travel">If my team is accepted into the Prototype phase, do we 
 		have to cover the cost of travel to Amman?</a></h2>
 	<h2><a class="FAQ" href="#MIT">Will participants travel to MIT in Cambridge, Massachusetts?</a></h2>
 	<h2><a class="FAQ" href="#ForProfit">Does our idea have to be for-profit?</a></h2>
