--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -60,15 +60,20 @@
 							      </header>
 <section style="padding: 10%; padding-top: 5%;">
 <div class="container"  style="border: 15px solid #B6B6B4";>
+	<h1><a class="FAQ" href="#Application">Application Questions</a></h1>
+	<h2><a class="FAQ" href="#Eligible">Who is eligible to participate in the Refugee Learning Accelerator?</a></h2>
 	<h2><a class="FAQ" href="#Individual">Can I apply as an individual?</a></h2>
+	<h2><a class="FAQ" href="#Team">Does my team all have to be located in one place?</a></h2>
+	<h2><a class="FAQ" href="#Refugee">Do I have to be a refugee to participate in the Accelerator?</a></h2>
 	<h2><a class="FAQ" href="#MiddleEast">I’m a refugee and no longer live in the Middle East, can I still apply?</a>
 	</h2>
-	<h2><a class="FAQ" href="#Abroad">I’m Lebanese/ Jordanian/ Iraqi/ Palestinian/ Syrian, but live abroad, can I still apply?
-		</a></h2>
-	<h2><a class="FAQ" href="#Refugee">Do I have to be a refugee to participate in the Accelerator?</a></h2>
-	<h2><a class="FAQ" href="#Idea">I already have an idea about using technology to support refugee learners, can I still apply?
-		</a></h2>
-	<h2><a class="FAQ" href="#Team">Does my team all have to be located in one place?</a></h2>
+	<h2><a class="FAQ" href="#Abroad">I’m Lebanese/ Jordanian/ Iraqi/ Palestinian/ Syrian, but live abroad, can I still 
+		apply?</a></h2>
+	<h2><a class="FAQ" href="#Idea">I already have an idea about using technology to support refugee learners, can I 
+		still apply?</a></h2>
+	<h1><a class="FAQ" href="#ProgramQuestions"><Program Questions</a></h1>
+	
+	
 	<h2><a class="FAQ" href="#TimeCommitment">What is the time commitment?</a></h2>
 	<h2><a class="FAQ" href="#Travel">If my team is accepted into the Prototype phase, do we 
 		have to cover the cost of travel to Amman?</a></h2>
@@ -76,34 +81,45 @@
 	<h2><a class="FAQ" href="#ForProfit">Does our idea have to be for-profit?</a></h2>
 	<h2><a class="FAQ" href="#OfficeSpace">Do you provide office space?</a></h2>
 	<h2><a class="FAQ" href="#Certificate">Upon completion of the program, will I receive a certificate?</a></h2>
-	<h2><a class="FAQ" href="#IntellectualProperty">Does MIT own the intellectual property of Refugee Learning Accelerator projects?
-		</a></h2>
+	<h2><a class="FAQ" href="#IntellectualProperty">Does MIT own the intellectual property of Refugee Learning 
+		Accelerator projects?</a></h2>
 	<h2><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
 	<h2><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>
-	<h2><a class="FAQ" href="#Eligible">Who is eligible to participate in the Refugee Learning Accelerator?</a></h2>
-	<h2><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?</a></h2>
+	<h2><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?</a</h2>
 	</div>
 	<div class="container">
-	<h2 id="Individual" class="FAQ">Can I apply as an individual?</h2>
-	<p class="QA">No. We’re looking for people to apply on teams. However, if you don’t already have a team you can head over to 
-		our <a href="https://www.facebook.com/groups/147496302487491" class="class2">Facebook Marketplace</a> to find other 
-		individuals interested in forming a team.</p>	     
-	<h2 id="MiddleEast" class="FAQ">I’m a refugee and no longer live in the Middle East, can I still apply?</h2>
-	<p class="QA">Definitely! Refugees from the Middle East are eligible to apply from wherever they are currently living. 
-		Unfortunately, due to restrictions on our funding, we are unable to work with current residents of Syria.</p>
-	<h2 id="Abroad" class="FAQ">I’m Lebanese/ Jordanian/ Iraqi/ Palestinian/ Syrian, but live abroad, can I still apply?</h2>
-	<p class="QA">Definitely! However, in the application we will ask about your future plans and commitment to the region. We’re 
-		looking to support projects that will be based in the Middle East.</p>
-	<h2 id="Refugee" class="FAQ">Do I have to be a refugee to participate in the Accelerator?</h2>
-	<p class="QA">No. We're looking to support a community of innovators from the Middle East with an interest in using their tech 
-		skills to support refugee learners, but you don't have to be a refugee.</p>
+		<h1 id="Application">Application Questions</h1>
+		<h2 id="Eligible" class="FAQ">Who is eligible to participate in the Refugee Learning Accelerator?</h2>
+		<p class="QA">Details on eligibility are available <a class="class2" href="/apply">here</a>.</p>
+		<h2 id="Individual" class="FAQ">Can I apply as an individual?</h2>
+		<p class="QA">No. We’re looking for people to apply on teams. However, if you don’t already have a team you 
+			can head over to our <a href="https://www.facebook.com/groups/147496302487491" 
+						class="class2">Facebook Marketplace</a> to find other individuals interested 
+			in forming a team.</p>
+		<h2 id="Team" class="FAQ">Does my team all have to be located in one place?</h2>
+		<p class="QA">No. It will probably be easier to work together if at least a portion of your team is 
+			co-located, but it is not a requirement.</p>
+		<h2 id="Refugee" class="FAQ">Do I have to be a refugee to participate in the Accelerator?</h2>
+		<p class="QA">No. We're looking to support a community of innovators from the Middle East with an interest 
+			in using their tech skills to support refugee learners, but you don't have to be a refugee.</p>
+		<h2 id="MiddleEast" class="FAQ">I’m a refugee and no longer live in the Middle East, can I still apply?</h2
+			<p class="QA">Definitely! Refugees from the Middle East are eligible to apply from wherever they are 
+			currently living. Unfortunately, due to restrictions on our funding, we are unable to work with 
+			current residents of Syria.</p>	
+		<h2 id="Abroad" class="FAQ">I’m Lebanese/ Jordanian/ Iraqi/ Palestinian/ Syrian, but live abroad, can I 
+			still apply?</h2>
+		<p class="QA">Definitely! However, in the application we will ask about your future plans and commitment to 
+			the region. We’re looking to support projects that will be based in the Middle East.</p>
 	<h2 id="Idea" class="FAQ">I already have an idea about using technology to support refugee learners, can I still apply?</h2>
-	<p class="QA">Certainly, but you’ll still have to go through the <a class="class2" href="/program">Ideate stage.</a> We want 
-		you to be up to speed on what is currently happening in the field of digital education for refugees and connect with 
-		other teams. The Ideate stage is designed to do just that.</p>
-	<h2 id="Team" class="FAQ">Does my team all have to be located in one place?</h2>
-	<p class="QA">No. It will probably be easier to work together if at least a portion of your team is co-located, but it is not a 
-		requirement.</p>
+	<p class="QA">Certainly, but you’ll still have to go through the <a class="class2" href="/program">Ideate stage.</a> 
+		We want you to be up to speed on what is currently happening in the field of digital education for refugees 
+		and connect with other teams. The Ideate stage is designed to do just that.</p>
+		
+		
+		
+		
+		
+		
 	<h2 id="TimeCommitment" class="FAQ">What is the time commitment?</h2>
 	<p class="QA">The time commitment will vary by phase. In the Ideate phase we expect you to spend about 15-20 hours per week on 
 		activities related to the Refugee Learning Accelerator. In the Prototype phase teams will spend a week together in 
@@ -140,8 +156,6 @@
 		and want to learn--whether that is in a formal school system or more informally. The refugee learner does not 
 		necessarily have to be the end user of the project--it could also be parents, teachers etc., but all projects should be 
 		beneficial to refugee learners in some capacity.</p>
-	<h2 id="Eligible" class="FAQ">Who is eligible to participate in the Refugee Learning Accelerator?</h2>
-	<p class="QA">Details on eligibility are available <a class="class2" href="/apply">here</a>.</p>
 	<h2 id="Program" class="FAQ">What do participants in the Refugee Learning Accelerator program receive?</h2>
 	<p class="QA">Information on the structure of the Accelerator is available <a class="class2" href="/program">here</a>.</p>
 
