--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -88,7 +88,7 @@
 	<h2><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?</a</h2>
 	</div>
 	<div class="container">
-		<h1 id="Application">Application Questions</h1>
+		<h1 id="Application" class="FAQ">Application Questions</h1>
 		<h2 id="Eligible" class="FAQ">Who is eligible to participate in the Refugee Learning Accelerator?</h2>
 		<p class="QA">Details on eligibility are available <a class="class2" href="/apply">here</a>.</p>
 		<h2 id="Individual" class="FAQ">Can I apply as an individual?</h2>
@@ -110,10 +110,11 @@
 			still apply?</h2>
 		<p class="QA">Definitely! However, in the application we will ask about your future plans and commitment to 
 			the region. We’re looking to support projects that will be based in the Middle East.</p>
-	<h2 id="Idea" class="FAQ">I already have an idea about using technology to support refugee learners, can I still apply?</h2>
-	<p class="QA">Certainly, but you’ll still have to go through the <a class="class2" href="/program">Ideate stage.</a> 
+		<h2 id="Idea" class="FAQ">I already have an idea about using technology to support refugee learners, can I still apply?</h2>
+		<p class="QA">Certainly, but you’ll still have to go through the <a class="class2" href="/program">Ideate stage.</a> 
 		We want you to be up to speed on what is currently happening in the field of digital education for refugees 
 		and connect with other teams. The Ideate stage is designed to do just that.</p>
+		<h1 id="ProgramQuestions class="FAQ"><Program Questions</h1>
 		
 		
 		
