--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -85,7 +85,7 @@
 		Accelerator projects?</a></h2>
 	<h2><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
 	<h2><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>
-	<h2><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?</a</h2>
+	<h2><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?</a></h2>
 	</div>
 	<div class="container">
 		<h1 id="Application" class="FAQ">Application Questions</h1>
