--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -71,7 +71,7 @@
 		apply?</a></h2>
 	<h2><a class="FAQ" href="#Idea">I already have an idea about using technology to support refugee learners, can I 
 		still apply?</a></h2>
-	<h1><a class="FAQ" href="#ProgramQuestions"><Program Questions</a></h1>
+	<h1><a class="FAQ" href="#ProgramQuestions">Program Questions</a></h1>
 	
 	
 	<h2><a class="FAQ" href="#TimeCommitment">What is the time commitment?</a></h2>
@@ -114,7 +114,7 @@
 		<p class="QA">Certainly, but you’ll still have to go through the <a class="class2" href="/program">Ideate stage.</a> 
 		We want you to be up to speed on what is currently happening in the field of digital education for refugees 
 		and connect with other teams. The Ideate stage is designed to do just that.</p>
-		<h1 id="ProgramQuestions" class="FAQ"><Program Questions</h1>
+		<h1 id="ProgramQuestions" class="FAQ">Program Questions</h1>
 		
 		
 		
