--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -72,20 +72,23 @@
 	<h2><a class="FAQ" href="#Idea">I already have an idea about using technology to support refugee learners, can I 
 		still apply?</a></h2>
 	<h1><a class="FAQ" href="#ProgramQuestions">Program Questions</a></h1>
-	
-	
 	<h2><a class="FAQ" href="#TimeCommitment">What is the time commitment?</a></h2>
+	<h2><a class="FAQ" href="#ForProfit">Does our idea have to be for-profit?</a></h2>
+	<h2><a class="FAQ" href="#OfficeSpace">Do you provide office space?</a></h2>
 	<h2><a class="FAQ" href="#Travel">If my team is accepted into the Prototype phase, do we 
 		have to cover the cost of travel to Amman?</a></h2>
 	<h2><a class="FAQ" href="#MIT">Will participants travel to MIT in Cambridge, Massachusetts?</a></h2>
-	<h2><a class="FAQ" href="#ForProfit">Does our idea have to be for-profit?</a></h2>
-	<h2><a class="FAQ" href="#OfficeSpace">Do you provide office space?</a></h2>
 	<h2><a class="FAQ" href="#Certificate">Upon completion of the program, will I receive a certificate?</a></h2>
 	<h2><a class="FAQ" href="#IntellectualProperty">Does MIT own the intellectual property of Refugee Learning 
 		Accelerator projects?</a></h2>
+		<h2><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?
+			</a></h2>
+	
+	
+	
+	
 	<h2><a class="FAQ" href="#Learning">Why the focus on learning?</a></h2>
 	<h2><a class="FAQ" href="#RefugeeLearners">What do you mean by "refugee learners?"</a></h2>
-	<h2><a class="FAQ" href="#Program">What do participants in the Refugee Learning Accelerator program receive?</a></h2>
 	</div>
 	<div class="container">
 		<h1 id="Application" class="FAQ">Application Questions</h1>
@@ -110,42 +113,47 @@
 			still apply?</h2>
 		<p class="QA">Definitely! However, in the application we will ask about your future plans and commitment to 
 			the region. We’re looking to support projects that will be based in the Middle East.</p>
-		<h2 id="Idea" class="FAQ">I already have an idea about using technology to support refugee learners, can I still apply?</h2>
-		<p class="QA">Certainly, but you’ll still have to go through the <a class="class2" href="/program">Ideate stage.</a> 
-		We want you to be up to speed on what is currently happening in the field of digital education for refugees 
-		and connect with other teams. The Ideate stage is designed to do just that.</p>
+		<h2 id="Idea" class="FAQ">I already have an idea about using technology to support refugee learners, can I 
+			still apply?</h2>
+		<p class="QA">Certainly, but you’ll still have to go through the <a class="class2" href="/program">Ideate 
+			stage.</a> We want you to be up to speed on what is currently happening in the field of digital 
+			education for refugees and connect with other teams. The Ideate stage is designed to do just that.
+		</p>
 		<h1 id="ProgramQuestions" class="FAQ">Program Questions</h1>
-		
-		
-		
-		
-		
-		
-	<h2 id="TimeCommitment" class="FAQ">What is the time commitment?</h2>
-	<p class="QA">The time commitment will vary by phase. In the Ideate phase we expect you to spend about 15-20 hours per week on 
-		activities related to the Refugee Learning Accelerator. In the Prototype phase teams will spend a week together in 
-		Amman. Overall, the Accelerator is designed to be a part-time commitment. We do not expect you to quit your job or 
-		suspend your schooling to work on this.</p>
-	<h2 id="Travel" class="FAQ">If my team is accepted into the <a class="class2" href="/program">Prototype phase</a>, do 
-		we have to cover the cost of travel to Amman?</h2>
-	<p class="QA">No. The Refugee Learning Accelerator will cover the cost of travel for all successful teams. However, it is your 
-		responsibility to make sure that you have a valid passport.</p>
-	<h2 id="MIT" class="FAQ">Will participants travel to MIT in Cambridge, Massachusetts?</h2>
-	<p class="QA">No. Successful participants will be brought together in Beirut or Amman. There will be no travel to the U.S.</p>
-	<h2 id="ForProfit" class="FAQ">Does our idea have to be for-profit?</h2>
-	<p class="QA">No, definitely not! We want teams to think about the financial sustainability of their projects, but there are 
-		many different ways to achieve that, both non-profit and for-profit.</p>
-	<h2 id="OfficeSpace" class="FAQ">Do you provide office space?</h2>
-	<p class="QA">No. We are not able to provide any office space in the Ideate phase. In the Incubate phase, if necessary, we will 
-		coordinate with partner organizations to find office space wherever the team is located.</p>
-	<h2 id="Certificate" class="FAQ">Upon completion of the program, will I receive a certificate?</h2>
-	<p class="QA">Yes, you will receive a certificate of completion. However, this is not an accredited MIT education program and 
-		does not count towards an MIT degree.</p>
-	<h2 id="IntellectualProperty" class="FAQ">Does MIT own the intellectual property of Refugee Learning Accelerator projects?</h2>
-	<p class="QA">Participants retain all intellectual property in their work, but we require contributions during the Ideate phase 
-		to be openly licensed (software under an open source initiative <a href="https://opensource.org/licenses" 
-										   class="class2">approved license</a>; content under 
+		<h2 id="TimeCommitment" class="FAQ">What is the time commitment?</h2>
+		<p class="QA">The time commitment will vary by phase. In the Ideate phase we expect you to spend about 15-20 
+			hours per week on activities related to the Refugee Learning Accelerator. In the Prototype phase 
+			teams will spend a week together in Amman. Overall, the Accelerator is designed to be a part-time 
+			commitment. We do not expect you to quit your job or suspend your schooling to work on this.</p>
+		<h2 id="ForProfit" class="FAQ">Does our idea have to be for-profit?</h2>
+		<p class="QA">No, definitely not! We want teams to think about the financial sustainability of their 
+			projects, but there are many different ways to achieve that, both non-profit and for-profit.</p>
+		<h2 id="OfficeSpace" class="FAQ">Do you provide office space?</h2>
+		<p class="QA">No. We are not able to provide any office space in the Ideate phase. In the Incubate phase, if 
+			necessary, we will coordinate with partner organizations to find office space wherever the team is 
+			located.</p>	
+		<h2 id="Travel" class="FAQ">If my team is accepted into the <a class="class2" href="/program">Prototype 
+			phase</a>, do we have to cover the cost of travel to Amman?</h2>
+		<p class="QA">No. The Refugee Learning Accelerator will cover the cost of travel for all successful teams. 
+			However, it is your responsibility to make sure that you have a valid passport.</p>
+		<h2 id="MIT" class="FAQ">Will participants travel to MIT in Cambridge, Massachusetts?</h2>
+		<p class="QA">No. Successful participants will be brought together in Beirut or Amman. There will be no 
+			travel to the U.S.</p>
+		<h2 id="Certificate" class="FAQ">Upon completion of the program, will I receive a certificate?</h2>
+		<p class="QA">Yes, you will receive a certificate of completion. However, this is not an accredited MIT 
+			education program and does not count towards an MIT degree.</p>
+		<h2 id="IntellectualProperty" class="FAQ">Does MIT own the intellectual property of Refugee Learning 
+			Accelerator projects?</h2>
+		<p class="QA">Participants retain all intellectual property in their work, but we require contributions 
+			during the Ideate phase to be openly licensed (software under an open source initiative <a 
+			href="https://opensource.org/licenses" class="class2">approved license</a>; content under 
 		<a href="https://creativecommons.org/licenses/by/4.0/" class="class2">CC BY</a>).</p>
+		<h2 id="Program" class="FAQ">What do participants in the Refugee Learning Accelerator program receive?</h2>
+		<p class="QA">Information on the structure of the Accelerator is available <a class="class2" 
+											      href="/program">here</a>.</p>
+		
+		
+		
 	<h2 id="Learning" class="FAQ">Why the focus on learning?</h2>
 	<p class="QA">Because it’s what we do! The MIT Media Lab Learning Initiative is focused on the future of learning; we develop 
 		technologies and workshops centered around the four Ps of creative learning: peers, play, passion and projects. We’re 
@@ -157,9 +165,6 @@
 		and want to learn--whether that is in a formal school system or more informally. The refugee learner does not 
 		necessarily have to be the end user of the project--it could also be parents, teachers etc., but all projects should be 
 		beneficial to refugee learners in some capacity.</p>
-	<h2 id="Program" class="FAQ">What do participants in the Refugee Learning Accelerator program receive?</h2>
-	<p class="QA">Information on the structure of the Accelerator is available <a class="class2" href="/program">here</a>.</p>
-
 <!--	
 	<h2>What’s the ultimate aim of the Refugee Learning Accelerator?</h2>
 	<p class="QA">This is a pilot phase and--to a certain extent--an experiment. We believe that the Middle East is facing a series of crisis around refugees, youth employment, and education, but that it already has many of the tools necessary to respond to these crises. We’re passionate about supporting young computer scientists and engineers to think critically about the future of learning.</p>
