--- a/about/index.html
+++ b/about/index.html
@@ -142,7 +142,7 @@
                             <div class="header-content-inner">
                                 <h1 id="homeHeading">Contact Us</h1>
                                 <hr>
-                                <p><a class="class3" href="mailto:refugees@media.mit.edu">refugees@media.mit.edu</a></p>
+                                <p><a class="class3" href="mailto:refugeelearning@media.mit.edu">refugeelearning@media.mit.edu</a></p>
 											 <p>MIT Media Lab<br>
 											 75 Amherst St.<br>
 											 Cambridge, MA<br>
