--- a/apply/index.html
+++ b/apply/index.html
@@ -57,12 +57,12 @@
                     <div class="service-box">
 					    <h2>Who Can Apply</h2>
 					    <li class="list">Computer scientists, electrical engineers and designers from Syria,<b>*</b> Jordan, Lebanon, Iraq and Palestine, who want to use their tech skills to support refugee learners.</li> 
-		   <li class="list"> You must apply in a team of 3-6 people. If you don't have people to team up with head over to our <a class="class2" href="https://www.facebook.com/groups/147496302487491">Facebook Marketplace</a> to find other prospective participants with complementary skills. </li>
+		   <li class="list"> You must apply in a team of 2-5 people. If you don't have people to team up with head over to our <a class="class2" href="https://www.facebook.com/groups/147496302487491">Facebook Marketplace</a> to find other prospective participants with complementary skills. </li>
       <li class="list">You must have a working knowledge of Arabic and English.</li>
     <li class="list">You must have a valid passport. Successful participants will travel to Amman and/or Beirut during the <a class="class2" href="/program">Prototype phase</a>.
    </li>
 																	       <p></p>														                           <p class="list" style="font-size: 18px; line-height:1.4em;">*Unfortunately we are unable to work with current residents of Syria; Syrians living elsewhere in the Middle East or abroad are eligible; for Jordan, Lebanon, Iraq or Palestine, applicants may be residents and/or citizens.</p>
-			<hr>																	   <p style="text-align: center">If you don’t meet these criteria and are still interested in supporting the project, please email <a class="class2" href="mailto:refugees@media.mit.edu">refugees@media.mit.edu</a>.</p>
+			<hr>																	   <p style="text-align: center">If you don’t meet these criteria and are still interested in supporting the project, please email <a class="class2" href="mailto:refugeelearning@media.mit.edu">refugeelearning@media.mit.edu</a>.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
